--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -991,229 +991,14 @@ section.lazy-placeholder:after {
     width: 100%;
   }
 }
-.cid-rArWHXCrjo {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #f1eeea;
-}
-.cid-rArWHXCrjo .row {
-  padding: 0 1rem;
-  justify-content: center;
-}
-.cid-rArWHXCrjo .title {
-  max-width: 800px;
-  margin: auto;
-}
-.cid-rArWHXCrjo .mbr-testimonial {
-  padding: 0;
-}
-.cid-rArWHXCrjo .mbr-testimonial .card-block {
-  -webkit-flex-grow: 0;
-  flex-grow: 0;
-}
-.cid-rArWHXCrjo .mbr-testimonial .card-block .testimonial-photo {
-  display: inline-block;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-}
-.cid-rArWHXCrjo .mbr-testimonial .card-block .testimonial-photo img {
-  width: 100%;
-  min-width: 100%;
-  height: 380px;
-  object-fit: cover;
-  min-height: 100%;
-}
-.cid-rArWHXCrjo .mbr-testimonial p {
-  padding: 0 1rem;
-}
-.cid-rArWHXCrjo .mbr-testimonial .card-footer {
-  margin-bottom: 2.2rem;
-  border-top: 0;
-  padding: 1rem 1rem 3rem 1rem;
-  word-wrap: break-word;
-  word-break: break-word;
-  background: none;
-  position: relative;
-}
-.cid-rArWHXCrjo .mbr-testimonial .card-footer:before {
-  content: '';
-  position: absolute;
-  background: #b69b74;
-  bottom: -1rem;
-  left: 50%;
-  width: 2px;
-  height: 3rem;
-}
-@media (max-width: 300px) {
-  .cid-rArWHXCrjo .testimonial-photo {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-.cid-rArWHXCrjo .mbr-author-desc {
-  color: #b69b74;
-}
-.cid-rArWHXCrjo H2 {
-  color: #b69b74;
-}
-@media (max-width: 992px) {
-  .cid-rArWHXCrjo .md-pb {
-    padding-bottom: 2rem!important;
-  }
-}
-.cid-rArWILL1E6 {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #eee8df;
-}
-@media (max-width: 992px) {
-  .cid-rArWILL1E6 {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .cid-rArWILL1E6 .md-pb {
-    margin-bottom: 2rem;
-  }
-}
-.cid-rArWILL1E6 .link {
-  position: relative;
-  width: fit-content;
-  display: inline-block;
-  padding-right: 2rem;
-  cursor: pointer;
-}
-.cid-rArWILL1E6 .link:before {
-  content: "\e966";
-  font-family: MobiriseIcons !important;
-  position: absolute;
-  right: 0rem;
-  transition: all 0.3s;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 1rem;
-  color: currentColor;
-}
-.cid-rArWILL1E6 .link:hover:before {
-  margin-right: -0.4rem;
-}
-.cid-rArWILL1E6 .box {
-  background-size: cover;
-  background-position: center;
-  height: 500px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-.cid-rArWILL1E6 .box:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #cebfaf;
-  opacity: 0.6;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-.cid-rArWILL1E6 .bg1 {
-  background-image: url("../../../assets/images/background1.jpg");
-}
-.cid-rArWILL1E6 .bg2 {
-  background-image: url("../../../assets/images/background2.jpg");
-}
-.cid-rArWILL1E6 .icon-wrap {
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s;
-  position: relative;
-  z-index: 2;
-}
-.cid-rArWILL1E6 .icon-wrap:hover {
-  transform: scale(1.1);
-}
-.cid-rArWILL1E6 .icon-wrap span {
-  padding-left: 8px;
-}
-.cid-rArWILL1E6 .mbr-media span {
-  font-size: 38px;
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  transition: all 0.25s;
-  color: #ffffff !important;
-}
-.cid-rArWILL1E6 .mbr-media span.mbri-play:before {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-35%);
-  -moz-transform: translateX(-35%);
-  -ms-transform: translateX(-35%);
-  -o-transform: translateX(-35%);
-  transform: translateX(-35%);
-}
-.cid-rArWILL1E6 .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-rArWILL1E6 .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-rArWILL1E6 .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-rArWILL1E6 a.close {
-  position: absolute;
-  right: 4vw;
-  top: 4vh;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 37px;
-  background: #000;
-  padding: 20px;
-  border-radius: 50%;
-}
-.cid-rArWILL1E6 a.close:hover {
-  color: #ffffff;
-}
-@media (max-width: 576px) {
-  .cid-rArWILL1E6 {
-    padding-top: 21px;
-    padding-bottom: 21px;
-  }
-  .cid-rArWILL1E6 .box {
-    height: 250px;
-  }
-}
-.cid-rArWILL1E6 H4 {
-  color: #b69b74;
-}
-.cid-rArWIuB3C5 {
-  padding-top: 600px;
-  background-image: url("../../../assets/images/background4.jpg");
-}
 .cid-rArWJZPMfb {
   padding-top: 90px;
   padding-bottom: 0px;
-  background-color: #2a2525;
+  background-color: #212c3e;
 }
 .cid-rArWJZPMfb .mbr-text {
   color: #ffffff;
+  text-align: center;
 }
 .cid-rArWJZPMfb .container {
   max-width: 1000px;
