create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -898,23 +898,96 @@ section.lazy-placeholder:after {
     padding: 2rem 2rem;
   }
 }
-.cid-rArWHD1YFc {
-  padding-top: 45px;
-  padding-bottom: 90px;
-  background-color: #f1eeea;
+.cid-s1rWFvjKoF {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #28505a;
 }
-.cid-rArWHD1YFc .mbr-text {
-  color: #767676;
-}
-.cid-rArWHD1YFc h4 {
-  text-align: center;
-}
-.cid-rArWHD1YFc p {
-  text-align: center;
-}
-.cid-rArWHD1YFc .card-img span {
-  font-size: 96px;
+.cid-s1rWFvjKoF .mbr-iconfont {
+  font-family: 'Moririse2' !important;
+  display: inline-flex;
+  transform-origin: ;
+  transform: rotate(45deg);
+  transition: all 0.3s;
+  padding: 0!important;
+  font-size: 1.4rem!important;
   color: #b69b74;
+}
+.cid-s1rWFvjKoF .p-4 {
+  padding: 1rem 0!important;
+}
+.cid-s1rWFvjKoF .content {
+  max-width: 650px;
+}
+.cid-s1rWFvjKoF img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: top;
+  margin-bottom: 3rem;
+  box-shadow: 2.5px 4.3px 29px 0 rgba(0, 0, 0, 0.18);
+}
+.cid-s1rWFvjKoF .accordion .card .card-header {
+  margin-bottom: 0px;
+}
+.cid-s1rWFvjKoF .mbri-arrow-down:before {
+  content: "\e960";
+}
+.cid-s1rWFvjKoF .mbri-arrow-up:before {
+  content: "\e960";
+}
+.cid-s1rWFvjKoF .collapsed .mbr-iconfont {
+  transform: rotate(0deg);
+}
+.cid-s1rWFvjKoF h4 {
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
+}
+.cid-s1rWFvjKoF .card {
+  border-radius: 0px;
+}
+.cid-s1rWFvjKoF .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  background-color: transparent;
+  padding: 0;
+  border-bottom: 2px solid #b69b74;
+}
+.cid-s1rWFvjKoF .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  text-decoration: none !important;
+  line-height: normal;
+}
+.cid-s1rWFvjKoF .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-s1rWFvjKoF .card .card-header a.panel-title h4 {
+  padding: 1.2rem 0rem;
+  margin-bottom: 0;
+}
+.cid-s1rWFvjKoF .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+@media (max-width: 992px) {
+  .cid-s1rWFvjKoF img {
+    width: 100%;
+  }
+  .cid-s1rWFvjKoF .content {
+    max-width: 100%;
+  }
+}
+.cid-s1rWFvjKoF H4 {
+  color: #ffffff;
+}
+.cid-s1rWFvjKoF .panel-text {
+  color: #ffffff;
 }
 .cid-rArWGHv2Uu {
   padding-top: 60px;
@@ -991,54 +1064,128 @@ section.lazy-placeholder:after {
     width: 100%;
   }
 }
-.cid-rArWJZPMfb {
-  padding-top: 90px;
+.cid-s1rTjVDa4d {
+  padding-top: 0px;
   padding-bottom: 0px;
+  padding-left: 0;
+  padding-right: 0;
   background-color: #212c3e;
 }
-.cid-rArWJZPMfb .mbr-text {
-  color: #ffffff;
-  text-align: center;
+.cid-s1rTjVDa4d ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-.cid-rArWJZPMfb .container {
-  max-width: 1000px;
+.cid-s1rTjVDa4d ul li {
+  padding: 1rem 0;
 }
-.cid-rArWJZPMfb h4 {
-  text-align: center;
+.cid-s1rTjVDa4d ul li:hover {
+  color: #b69b74;
 }
-.cid-rArWJZPMfb p {
-  text-align: center;
-}
-.cid-rArWJZPMfb .row {
-  justify-content: center;
-}
-.cid-rArWJZPMfb .card-img span {
-  font-size: 96px;
-  color: #149dcc;
-}
-.cid-rArWJZPMfb .mbr-iconfont {
+.cid-s1rTjVDa4d .socicon {
+  color: #fff;
   font-size: 1.5rem;
-  color: #b69b74;
-  display: block;
 }
-.cid-rArWJZPMfb .card-title,
-.cid-rArWJZPMfb .card-img {
-  color: #b69b74;
+.cid-s1rTjVDa4d .mbr-iconfont {
+  margin-right: 1em;
+  display: inline-block;
+  vertical-align: bottom;
 }
-.cid-rArWJZPMfb .icon-wrap {
-  padding-bottom: 7.6rem;
+.cid-s1rTjVDa4d .google-map {
+  -webkit-flex: 1;
+  flex: 1;
+  display: flex;
+  position: relative;
 }
-.cid-rArWJZPMfb .icon-wrap:before {
-  content: '';
-  position: absolute;
-  background: #b69b74;
-  bottom: 0rem;
-  left: 50%;
-  width: 2px;
-  height: 90px;
+.cid-s1rTjVDa4d .map {
+  padding: 0;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
-.cid-rArWJZPMfb img {
-  margin-bottom: 5rem;
+.cid-s1rTjVDa4d .map iframe {
+  -webkit-flex: 1;
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .cid-s1rTjVDa4d .map {
+    height: auto;
+  }
+}
+.cid-s1rTjVDa4d .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.cid-s1rTjVDa4d .social-list .soc-item {
+  padding: 0;
+  margin: 2rem 2rem 0 0;
+  display: inline-block;
+}
+.cid-s1rTjVDa4d .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s1rTjVDa4d .social-list a:hover {
+  opacity: 1;
+}
+.cid-s1rTjVDa4d .row-element,
+.cid-s1rTjVDa4d .image-element {
+  padding: 0;
+}
+.cid-s1rTjVDa4d .underline {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+.cid-s1rTjVDa4d .underline .line {
+  width: 5rem;
+  height: 3px;
+  background: linear-gradient(90deg, #b69b74, #7f1933);
+  display: inline-block;
+}
+@media (min-width: 1500px) {
+  .cid-s1rTjVDa4d .text-content {
+    padding: 5rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1499px) {
+  .cid-s1rTjVDa4d .text-content {
+    padding: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s1rTjVDa4d .text-content {
+    padding: 2rem 1rem;
+  }
+  .cid-s1rTjVDa4d .underline .line {
+    height: 2px;
+  }
+  .cid-s1rTjVDa4d .mbr-title,
+  .cid-s1rTjVDa4d .underline,
+  .cid-s1rTjVDa4d .mbr-text,
+  .cid-s1rTjVDa4d .mbr-section-btn {
+    text-align: center !important;
+  }
+}
+.cid-s1rTjVDa4d .mbr-title,
+.cid-s1rTjVDa4d .underline {
+  color: #ffffff;
+}
+.cid-s1rTjVDa4d .mbr-text,
+.cid-s1rTjVDa4d .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-s1rTjVDa4d mbr-list LI {
+  color: #ffffff;
+}
+.cid-s1rTjVDa4d mbr-list {
+  text-align: center;
+}
+.cid-s1rTjVDa4d .mbr-list,
+.cid-s1rTjVDa4d .social-list mbr-list {
+  color: #ffffff;
 }
 .cid-rArWKbZ4Lx {
   padding-top: 30px;
