--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12,28 +12,28 @@ body {
 }
 .display-1 {
   font-family: 'Playfair Display', serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 5.6rem;
+  font-size: 4.8rem;
 }
 .display-2 {
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 2.5rem;
+  font-size: 2rem;
   line-height: 1.3;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4rem;
+  font-size: 3.2rem;
 }
 .display-4 {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.7;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .display-5 {
   font-family: 'Lora', serif;
@@ -45,11 +45,11 @@ body {
 }
 .display-7 {
   font-family: 'Lora', serif;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.5;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 2.08rem;
+  font-size: 1.92rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -58,19 +58,19 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 2.8rem;
-    font-size: calc( 1.875rem + (3.5 - 1.875) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.875rem + (3.5 - 1.875) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.4rem;
+    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2rem;
-    font-size: calc( 1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.96rem;
-    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.8rem;
+    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.12rem;
@@ -544,11 +544,11 @@ a:hover {
 }
 .form-control {
   font-family: 'Lora', serif;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.5;
 }
 .form-control > .mbr-iconfont {
-  font-size: 2.08rem;
+  font-size: 1.92rem;
 }
 blockquote {
   border-color: #5263b8;
@@ -776,13 +776,13 @@ blockquote {
   width: 100%;
   object-fit: cover;
 }
-.cid-s1s54osxVB {
+.cid-s1uUbTr2Ih {
   padding-top: 60px;
   padding-bottom: 60px;
   position: relative;
   background-color: #28505a;
 }
-.cid-s1s54osxVB .mbr-iconfont {
+.cid-s1uUbTr2Ih .mbr-iconfont {
   font-family: 'Moririse2' !important;
   display: inline-flex;
   transform-origin: ;
@@ -792,13 +792,13 @@ blockquote {
   font-size: 1.4rem!important;
   color: #b69b74;
 }
-.cid-s1s54osxVB .p-4 {
+.cid-s1uUbTr2Ih .p-4 {
   padding: 1rem 0!important;
 }
-.cid-s1s54osxVB .content {
+.cid-s1uUbTr2Ih .content {
   max-width: 650px;
 }
-.cid-s1s54osxVB img {
+.cid-s1uUbTr2Ih img {
   width: 100%;
   height: 400px;
   object-fit: cover;
@@ -806,34 +806,34 @@ blockquote {
   margin-bottom: 3rem;
   box-shadow: 2.5px 4.3px 29px 0 rgba(0, 0, 0, 0.18);
 }
-.cid-s1s54osxVB .accordion .card .card-header {
+.cid-s1uUbTr2Ih .accordion .card .card-header {
   margin-bottom: 0px;
 }
-.cid-s1s54osxVB .mbri-arrow-down:before {
+.cid-s1uUbTr2Ih .mbri-arrow-down:before {
   content: "\e960";
 }
-.cid-s1s54osxVB .mbri-arrow-up:before {
+.cid-s1uUbTr2Ih .mbri-arrow-up:before {
   content: "\e960";
 }
-.cid-s1s54osxVB .collapsed .mbr-iconfont {
+.cid-s1uUbTr2Ih .collapsed .mbr-iconfont {
   transform: rotate(0deg);
 }
-.cid-s1s54osxVB h4 {
+.cid-s1uUbTr2Ih h4 {
   justify-content: space-between;
   display: flex;
   width: 100%;
 }
-.cid-s1s54osxVB .card {
+.cid-s1uUbTr2Ih .card {
   border-radius: 0px;
 }
-.cid-s1s54osxVB .card .card-header {
+.cid-s1uUbTr2Ih .card .card-header {
   border-radius: 0px;
   border: 0px;
   background-color: transparent;
   padding: 0;
   border-bottom: 2px solid #b69b74;
 }
-.cid-s1s54osxVB .card .card-header a.panel-title {
+.cid-s1uUbTr2Ih .card .card-header a.panel-title {
   margin-bottom: 0;
   font-style: normal;
   font-weight: 500;
@@ -843,28 +843,28 @@ blockquote {
   text-decoration: none !important;
   line-height: normal;
 }
-.cid-s1s54osxVB .card .card-header a.panel-title:focus {
+.cid-s1uUbTr2Ih .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-s1s54osxVB .card .card-header a.panel-title h4 {
+.cid-s1uUbTr2Ih .card .card-header a.panel-title h4 {
   padding: 1.2rem 0rem;
   margin-bottom: 0;
 }
-.cid-s1s54osxVB .card .card-header a.panel-title h4 .sign {
+.cid-s1uUbTr2Ih .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
 @media (max-width: 992px) {
-  .cid-s1s54osxVB img {
+  .cid-s1uUbTr2Ih img {
     width: 100%;
   }
-  .cid-s1s54osxVB .content {
+  .cid-s1uUbTr2Ih .content {
     max-width: 100%;
   }
 }
-.cid-s1s54osxVB H4 {
+.cid-s1uUbTr2Ih H4 {
   color: #ffffff;
 }
-.cid-s1s54osxVB .panel-text {
+.cid-s1uUbTr2Ih .panel-text {
   color: #ffffff;
 }
 .cid-s1s55vF2Ww {
