--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -865,6 +865,88 @@ blockquote {
     width: 100%;
   }
 }
+.cid-s2tdBs2ssw {
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+.cid-s2tdBs2ssw .container-fluid {
+  position: relative;
+}
+.cid-s2tdBs2ssw .page-title-content {
+  width: 100%;
+}
+.cid-s2tdBs2ssw .page-title-content .mbr-iconfont {
+  font-size: 55px;
+  height: 55px;
+  line-height: 55px;
+  width: 55px;
+  margin-top: -10px;
+  color: #f1a631;
+}
+.cid-s2tdBs2ssw .page-title-content .mbr-iconfont:hover {
+  cursor: pointer;
+}
+@media (max-width: 576px) {
+  .cid-s2tdBs2ssw .page-title-content {
+    text-align: center;
+  }
+}
+.cid-s2tdBs2ssw .title {
+  letter-spacing: 0.8px;
+  margin-top: 24px;
+  font-weight: 300;
+  margin: 0;
+  position: relative;
+  word-wrap: break-word;
+}
+.cid-s2tdBs2ssw a {
+  line-height: 1;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.cid-s2tdBs2ssw a:not(:first-child) {
+  margin-left: 20px;
+}
+.cid-s2tdBs2ssw a:after {
+  position: absolute;
+  margin-top: 7px;
+  background-color: currentColor;
+  display: block;
+  content: "";
+  height: 2px;
+  width: 100%;
+}
+.cid-s2tdBs2ssw a::before {
+  position: absolute;
+  margin-top: 5px;
+  background-color: currentColor;
+  display: block;
+  content: "";
+  height: 2px;
+  width: 0%;
+  bottom: 7px;
+}
+.cid-s2tdBs2ssw a:hover:after,
+.cid-s2tdBs2ssw a:focus:after {
+  animation-duration: 1s;
+  animation-name: slidein;
+}
+.cid-s2tdBs2ssw a:hover:before,
+.cid-s2tdBs2ssw a:focus:before {
+  animation-duration: 0.5s;
+  animation-delay: 0.5s;
+  animation-name: slideout;
+}
+.cid-s2tdBs2ssw a.text-white:hover,
+.cid-s2tdBs2ssw a.text-white:focus {
+  color: #ffffff !important;
+}
+.cid-s2tdBs2ssw .mbr-section-btn {
+  margin-left: 0;
+  margin-right: 0;
+}
 .cid-s1s6bGufBb {
   padding-top: 0px;
   padding-bottom: 0px;
