--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -865,91 +865,74 @@ blockquote {
     width: 100%;
   }
 }
-.cid-s2tdBs2ssw {
-  padding-top: 75px;
-  padding-bottom: 75px;
+.cid-s2tfP3i0Ya {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-image: url("../../../assets/images/background2.jpg");
 }
-.cid-s2tdBs2ssw .container-fluid {
-  position: relative;
+.cid-s2tfP3i0Ya p::before {
+  content: "";
+  position: absolute;
+  background: currentColor;
+  top: calc(98%);
+  left: calc(7%);
+  width: 104px;
+  height: 2px;
+  color: #ae3d3d;
 }
-.cid-s2tdBs2ssw .page-title-content {
-  width: 100%;
-}
-.cid-s2tdBs2ssw .page-title-content .mbr-iconfont {
-  font-size: 55px;
-  height: 55px;
-  line-height: 55px;
-  width: 55px;
-  margin-top: -10px;
-  color: #f1a631;
-}
-.cid-s2tdBs2ssw .page-title-content .mbr-iconfont:hover {
-  cursor: pointer;
-}
-@media (max-width: 576px) {
-  .cid-s2tdBs2ssw .page-title-content {
-    text-align: center;
+@media (max-width: 1200px) {
+  .cid-s2tfP3i0Ya p::before {
+    left: calc(9%);
   }
 }
-.cid-s2tdBs2ssw .title {
-  letter-spacing: 0.8px;
-  margin-top: 24px;
-  font-weight: 300;
-  margin: 0;
-  position: relative;
-  word-wrap: break-word;
+@media (max-width: 992px) {
+  .cid-s2tfP3i0Ya h2 {
+    text-align: center;
+    padding-left: 0;
+  }
+  .cid-s2tfP3i0Ya p {
+    padding-right: 0;
+  }
+  .cid-s2tfP3i0Ya p::before {
+    left: calc(10%);
+  }
 }
-.cid-s2tdBs2ssw a {
-  line-height: 1;
-  text-decoration: none;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
+@media (max-width: 767px) {
+  .cid-s2tfP3i0Ya h2 {
+    text-align: left !important;
+    padding-left: 0 !important;
+    margin-bottom: 2rem;
+  }
+  .cid-s2tfP3i0Ya p {
+    text-align: left !important;
+    position: relative;
+  }
+  .cid-s2tfP3i0Ya p::before {
+    margin: auto;
+    position: absolute;
+    left: 0;
+    top: 120%;
+    width: 60px;
+  }
+  .cid-s2tfP3i0Ya .pl-5 {
+    padding-left: 1rem !important;
+  }
+  .cid-s2tfP3i0Ya .mbr-iconfont {
+    top: -50px !important;
+  }
 }
-.cid-s2tdBs2ssw a:not(:first-child) {
-  margin-left: 20px;
-}
-.cid-s2tdBs2ssw a:after {
+.cid-s2tfP3i0Ya .mbr-iconfont {
+  color: #f9cf30;
+  font-size: 3.1rem;
   position: absolute;
-  margin-top: 7px;
-  background-color: currentColor;
-  display: block;
-  content: "";
-  height: 2px;
-  width: 100%;
+  top: -40px;
 }
-.cid-s2tdBs2ssw a::before {
-  position: absolute;
-  margin-top: 5px;
-  background-color: currentColor;
-  display: block;
-  content: "";
-  height: 2px;
-  width: 0%;
-  bottom: 7px;
-}
-.cid-s2tdBs2ssw a:hover:after,
-.cid-s2tdBs2ssw a:focus:after {
-  animation-duration: 1s;
-  animation-name: slidein;
-}
-.cid-s2tdBs2ssw a:hover:before,
-.cid-s2tdBs2ssw a:focus:before {
-  animation-duration: 0.5s;
-  animation-delay: 0.5s;
-  animation-name: slideout;
-}
-.cid-s2tdBs2ssw a.text-white:hover,
-.cid-s2tdBs2ssw a.text-white:focus {
-  color: #ffffff !important;
-}
-.cid-s2tdBs2ssw .mbr-section-btn {
-  margin-left: 0;
-  margin-right: 0;
+.cid-s2tfP3i0Ya .title {
+  font-weight: 100;
 }
 .cid-s1s6bGufBb {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   padding-left: 0;
   padding-right: 0;
   background-color: #212c3e;
